# udal

./: .dockerignore  .gitignore  index.html  meta.json  package-lock.json
compositions/: slide-01.html  slide-02.html  slide-03.html  slide-04.html  slide-05.html  slide-06.html  slide-07.html  slide-08.html  slide-09.html  slide-10.html  slide-11.html  slide-12.html  slide-13.html  slide-14.html  slide-15.html  slide-16.html  slide-17.html  slide-18.html  slide-19.html  slide-20.html  slide-21.html  slide-22.html  slide-23.html  slide-24.html  slide-25.html
docs/: ibis-lineage-architecture.md  production-hardening-plan.md
lineage_demo/: AGENTS.md  README.md  pyproject.toml  pytest-wheel.ini
lineage_demo/.github/workflows/: release.yml
lineage_demo/docker/: Dockerfile  entrypoint.sh
lineage_demo/docs/: agent-context.md  architecture.md  design.md  gap-analysis.md  release.md
lineage_demo/examples/: __init__.py
lineage_demo/examples/monthly_revenue/: __init__.py  config.py  demo_run.py  engine_io.py  execution.py  jobs.py  sample_data.py
lineage_demo/examples/monthly_revenue/fixtures/monthly_revenue/: customers.csv  fx_rates.csv  job_config.json  orders.csv  promotions.csv  returns.csv
lineage_demo/examples/multirepo_scan/: __init__.py  demo_run.py
lineage_demo/examples/multirepo_scan/repos/analytics_repo/analytics_jobs/: __init__.py  targets.py
lineage_demo/examples/multirepo_scan/repos/analytics_repo/analytics_jobs/stages/: __init__.py  reports.py
lineage_demo/examples/multirepo_scan/repos/catalog_repo/catalog/: __init__.py  refs.py
lineage_demo/examples/multirepo_scan/repos/mart_repo/mart_jobs/: __init__.py  targets.py
lineage_demo/examples/multirepo_scan/repos/mart_repo/mart_jobs/stages/: __init__.py  commerce.py  product.py
lineage_demo/examples/multirepo_scan/repos/ops_repo/ops_jobs/: __init__.py  targets.py
lineage_demo/examples/multirepo_scan/repos/ops_repo/ops_jobs/stages/: __init__.py  inventory.py
lineage_demo/examples/multistage_pipeline/: __init__.py  demo_run.py  jobs.py
lineage_demo/fixtures/monthly_revenue/: expected_monthly_revenue.csv
lineage_demo/scripts/: uv_test_matrix.sh
lineage_demo/src/ibis_unified_lineage/: __init__.py  config.py  demo_run.py  engine_io.py  execution.py  extractor.py  jobs.py  models.py  pipeline.py  sample_data.py  scanner.py  sqlglot_bridge.py  ui.py
lineage_demo/tests/: test_config.py  test_execution.py  test_extractor.py  test_multistage.py  test_package_surface.py  test_pipeline.py  test_scanner.py  test_ui.py
unified-data-access-layer-deck/: .gitignore  DESIGN.md  README.md  index.html  package.json
