[project]
name = "ibis-unified-lineage-demo"
version = "0.1.0"
description = "Engine-agnostic column lineage extraction for Ibis expressions."
requires-python = ">=3.11"
dependencies = [
  "ibis-framework[duckdb,sqlite,polars,postgres,pyspark]>=12.0.0",
  "pandas>=2.2",
  "pyarrow>=16",
  "sqlglot>=30",
]

[project.optional-dependencies]
mysql = ["mysqlclient>=2.2.4"]
test = ["pytest>=8"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
