[project]
name = "ibis-unified-lineage-demo"
version = "0.1.0"
description = "Engine-agnostic column lineage extraction for Ibis expressions."
requires-python = ">=3.10,<3.15"
dependencies = [
  "delta-spark==3.3.2",
  "ibis-framework[duckdb,polars,postgres,pyspark,sqlite]>=12.0.0",
  "pandas>=2.2,<3; python_version < '3.11'",
  "pandas>=2.2; python_version >= '3.11'",
  "pyarrow>=16",
  "pyspark==3.5.7",
  "sqlglot>=30",
]

[project.optional-dependencies]
mysql = ["mysqlclient>=2.2.4"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/ibis_unified_lineage"]

[tool.hatch.build.targets.wheel.force-include]
"fixtures" = "ibis_unified_lineage/fixtures"

[tool.hatch.build.targets.sdist]
include = [
  "src/ibis_unified_lineage",
  "fixtures",
  "pytest-wheel.ini",
  "scripts",
  "tests",
  "README.md",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]

[dependency-groups]
dev = [
    "pytest>=8",
]
